K8s/eksctl-alb-controller/echoserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
    alb.ingress.kubernetes.io/subnets: subnet-015f01f0053c1a53c,subnet-01d8f1a8cbf7d4099,subnet-03db7ab6ecff9edc1
spec:
  rules:
    - host: echoserver.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: echoserver
              port:
                number: 80
